# ACS_Project

./: .gitignore  CMakeLists.txt  README.md  analyze_ncu.py  benchmark.py  dct.h  image_io.cpp  main.cpp  merge_frames.py  metrics.h  report.tex  stat1.csv  test_dct16  test_dct16.cpp  test_entropy  test_entropy.cpp  tiling.cpp  tiling.h
bench/: CMakeLists.txt  codec_cpu.cpp  main_bench.cpp
report/: README.md  extract_frames.py  plots_flipbook.py
src/: codec.cpp  codec.h  cuda_kernels.cu  cuda_kernels.cuh  dct.cpp  dct.h  frame.h  huffman.cpp  huffman.h  image_io.cpp  image_io.h  main.cpp  main_cuda.cpp  main_omp.cpp  metrics.cpp  quant.cpp  quant.h
